# C2402_InterNoise_Soundscapy

./: .gitignore  .vdoc.py  FellowshipRefs-biblatex.bib  IN_2024_3404.typ  README.md  _publish.yml  _quarto.yml  main.ipynb  main.qmd  main.quarto_ipynb  main.typ  presentation.html  presentation.ipynb  presentation.qmd  presentation.quarto_ipynb  pyproject-pdm.toml  pyproject.toml  template.ipynb  template.qmd  template.typ  ucl-powerpoint-plain-black-16-9.potx  ucl-powerpoint-plain-black-16-9.pptx  updated_config.yaml
_extensions/MitchellAcoustics/internoise/typst/: typst-show.typ  typst-template.typ
data/: Levels.json
