[project]
name = "c2402-internoise-soundscapy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andrew Mitchell", email = "a.j.mitchell@ucl.ac.uk" }
]
dependencies = [
    "jupyter>=1.0.0",
    "jupyter-cache>=1.0.0",
    "markdown>=3.7",
    "circumplex>=0.1.4",
    "soundscapy>=0.7.0",
    "shutup>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "BSD-3-Clause" }

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
